fixed text align issues on about.html

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -46,12 +46,14 @@ a:hover {
     width: 30%;
     margin: auto;
     font-size: 18px;
+    text-align: left;
 }
 
 .favorites {
     width: 30%;
     margin: auto;
     font-size: 18px;
+    text-align: left;
 }
 
 .images {
